# DuckYAML

./: README.md  main.py  pyproject.toml  requirements.txt
input/: application.yml
output/: application-prod.properties  application-test.properties  application.properties
