[tool.poetry]
name = "duckyaml"
version = "0.1.0"
description = "Replace yaml with properties"
authors = ["Prashant Ghimire <pras.ghim@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
